--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,5 +4,7 @@
     <a routerLink="/sandbox">Sandbox</a>
     |
     <a routerLink="/button">Button</a>
+    |
+    <a routerLink="/movies">Moives</a>
 </nav>
 <router-outlet></router-outlet>
