--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,2 +1,2 @@
-<p>button works!</p>
-<button  [disabled]="disabled" (click)="changeCounter()">{{buttonText}}</button>
+
+<button  class="btn btn-outline-primary" [disabled]="disabled" (click)="changeCounter()">{{buttonText}}</button>
