--- a/src/app/pages/movies/movies.component.html
+++ b/src/app/pages/movies/movies.component.html
@@ -1,8 +1,21 @@
-<p>movies works!</p>
+
 @for(movie of MoviesList; track movie.id){
-    <section>
-        <img [src]="movie.thumbnail">
-        <h2>{{movie.id}}. {{movie.title}} ({{movie.year}})</h2>
-        <h2>{{movie.rating}}</h2>
-    </section>
+    <section class="movie-container border rounded p-3 mb-3">
+        <div class="row">
+          <div class="col-lg-4">
+            <img [src]="movie.thumbnail" alt="Film borítója" class="img-fluid">
+          </div>
+          <div class="col-lg-8">
+            <h2>{{movie.id}}. {{movie.title}} ({{movie.year}})</h2>
+            <div class="d-flex align-items-center justify-content-between">
+              <h4>⭐ {{movie.rating}}</h4>
+              <div>
+                <button class="btn btn-primary mr-2"><i class="bi bi-pencil"></i> Edit</button>
+                <button class="btn btn-secondary" (click)="removeMovie(movie.id)"><i class="bi bi-trash3-fill" ></i> Delete</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      
 }
