--- a/src/app/pages/movies/movies.component.html
+++ b/src/app/pages/movies/movies.component.html
@@ -1,16 +1,24 @@
-
+<form *ngIf="isEditable" class="form-inline" >
+  <div>
+    <label class="sr-only" for="inlineFormInputName2">Edit the movie title!</label>
+    <input  type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="{{newTitle}}" [(ngModel)]="newTitle">
+    <button type="submit" class="btn btn-primary mb-2" (click)="editTitle()">Edit</button>
+  </div>
+  
+</form>
 @for(movie of MoviesList; track movie.id){
-    <section class="movie-container border rounded p-3 mb-3">
+    <section class="movie-container border rounded p-3 mb-3" [ngClass]="{ 'edited': isEditable && editMovieid === movie.id }"
+    >
         <div class="row">
           <div class="col-lg-4">
-            <img [src]="movie.thumbnail" alt="Film borítója" class="img-fluid">
+            <img [src]="movie.thumbnail" alt="thumbnail" class="img-fluid">
           </div>
           <div class="col-lg-8">
             <h2>{{movie.id}}. {{movie.title}} ({{movie.year}})</h2>
             <div class="d-flex align-items-center justify-content-between">
               <h4>⭐ {{movie.rating}}</h4>
               <div>
-                <button class="btn btn-primary mr-2"><i class="bi bi-pencil"></i> Edit</button>
+                <button class="btn btn-primary mr-2" (click)="editMovieForm(movie.id, movie.title)"><i class="bi bi-pencil"></i> Edit</button>
                 <button class="btn btn-secondary" (click)="removeMovie(movie.id)"><i class="bi bi-trash3-fill" ></i> Delete</button>
               </div>
             </div>
